--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+
+    // DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
 }
