--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,6 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
