[feat]주간식단 RV -> VP 로 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,10 @@ dependencies {
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
+    // Background
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    implementation 'me.relex:circleindicator:2.1.6'
 }
