--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     //Secrets Plugin
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.4.1' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
 
 task clean(type: Delete) {
