[feat] Restaurant view complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Myongsik_android"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.view.MainActivity"
+            android:name=".ui.view.food.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
