item_restaurant_food.xml modif fragment_map.xml naverMap api

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven {
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }
+
     }
 }
 rootProject.name = "myongsik_android"
