--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
 
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    // Naver map
+    implementation 'com.naver.maps:map-sdk:3.14.0'
 }
