--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // google play
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
+
+
     //Moshi
     implementation 'com.squareup.moshi:moshi:1.13.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
