--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.4.1' apply false
     id 'com.google.dagger.hilt.android' version '2.41' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.4' apply false
 }
 
 task clean(type: Delete) {
