feat(sort): bug 수정 및 마무리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ android {
     defaultConfig {
         multiDexEnabled true
     }
+    defaultConfig {
+        vectorDrawables.useSupportLibrary = true
+    }
 }
 
 dependencies {
