--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="36e101d5ed7ab6cacec5f2a957ff12d6"/>
         <receiver android:name=".alarm.AlarmBroadCastReceiver"/>
     </application>
 
