fix(function1): 기능 1 추가 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.myongsik.myongsikandroid">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <queries>
-        <package android:name="com.nhn.android.nmap"/>
+        <package android:name="com.nhn.android.nmap" />
     </queries>
     <application
         android:name=".util.MyongsikApplication"
@@ -27,7 +28,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".alarm.AlarmBroadCastReceiver"/>
+
+        <receiver android:name=".alarm.AlarmBroadCastReceiver" />
+        <receiver
+            android:name=".ui.widget.MenuWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_menu" />
+        </receiver>
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="com.myongsik.myongsikandroid.androidx-startup"
+            tools:node="remove">
+        </provider>
     </application>
 
 </manifest>
