--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // google play
+    // Google play
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
+
+    // Google Admob
+    implementation 'com.google.android.gms:play-services-ads:22.0.0'
 
 
     //Moshi
