--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <queries>
         <package android:name="com.nhn.android.nmap" />
@@ -45,10 +45,14 @@
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="com.myongsik.myongsikandroid.androidx-startup"
-            tools:node="remove">
-        </provider>
+            tools:node="remove" />
 
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="44ba0213a21d755ef2e20b473a0ffd26"/>
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="44ba0213a21d755ef2e20b473a0ffd26" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-1097074016852233~8065667944" />
     </application>
 
 </manifest>
