feat(clean): #83 클린 아키텍쳐 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <receiver android:name=".alarm.AlarmBroadCastReceiver" />
         <receiver
-            android:name=".ui.widget.MenuWidget"
+            android:name=".presentation.widget.MenuWidget"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
