[fix] : 맵키 수정 및 숨김처리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="${kakaoApiKey}" />
+            android:value="${kakaoMapApiKey}" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="${admobApplicationId}" />
