--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ android {
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
         def admobApplicationId = properties.getProperty('ADMOB_APPLICATION_ID')
-        def kakaoApiKey = properties.getProperty('kakaoApiKey')
+        def kakaoMapApiKey = properties.getProperty('kakaoMapApiKey')
 
-        manifestPlaceholders = [admobApplicationId: admobApplicationId, kakaoApiKey: kakaoApiKey]
+        manifestPlaceholders = [admobApplicationId: admobApplicationId, kakaoMapApiKey: kakaoMapApiKey]
 
         buildConfigField "String", "ADMOB_MYONGSIK_INTERSTITIAL_HOME", properties.getProperty("ADMOB_MYONGSIK_INTERSTITIAL_HOME")
     }
