--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,4 +151,7 @@ dependencies {
 
     //map
     implementation files('libs/libDaumMapAndroid.jar')
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:4.13.2"
 }
