--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,18 @@
         android:theme="@style/Theme.Myongsik_android"
         android:usesCleartextTraffic="true">
 
+        <activity
+            android:name=".presentation.MainActivity"
+            android:exported="true"
+            tools:ignore="MissingClass">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="com.myongsik.myongsikandroid.androidx-startup"
