--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,47 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.myongsik.myongsikandroid">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-
-    <queries>
-        <package android:name="com.nhn.android.nmap" />
-    </queries>
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_main"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_main_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Myongsik_android"
-        android:usesCleartextTraffic="true">
-
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="com.myongsik.myongsikandroid.androidx-startup"
-            tools:node="remove" />
-
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="${kakaoMapApiKey}" />
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="${admobApplicationId}" />
-    </application>
-
-</manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"/>
