--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="${kakaoMapApiKey}" />
         <meta-data
+            android:name="com.kakao.vectormap.APP_KEY"
+            android:value="${kakaoMapApiKey}"/>
+        <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="${admobApplicationId}" />
     </application>
